Bug 449809 - KMail2 does not resize images
Summary: KMail2 does not resize images
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.18.90
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-08 21:29 UTC by Kurt Bennater
Modified: 2022-02-09 06:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Bennater 2022-02-08 21:29:45 UTC
SUMMARY
When sending an email, kmail asks whether to resize oversized images. If I confirm this, the oversized images are nevertheless sent unmodified. Auto-resizing used to work before.

STEPS TO REPRODUCE
1. Write an email in the internal composer and attach a high resolution image (e.g. 3000 x 4000 pixels).
2. Settings > Configure KMail ... > Composer > Tab "Auto Resize Images" > Automatically resize images is checked, reduce image to maximum height and width is set to 1024.
3. Click "Send".
4. KMail asks whether to auto-resize images, confirm this.
5. Check dimensions of the attached image in sent-mail folder.

OBSERVED RESULT
Images are sent unmodified, i.e. not resized.

EXPECTED RESULT
Images should be resized.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE 15.2
(available in About System)
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Comment 1 Laurent Montel 2022-02-09 06:11:09 UTC
Ok I will investigate it
Comment 2 Laurent Montel 2022-02-09 06:50:51 UTC
Git commit 56e8511dd2ddd92f5be948ffedfa6b8ac61c5cba by Laurent Montel.
Committed on 09/02/2022 at 06:50.
Pushed by mlaurent into branch 'release/21.12'.

Fix Bug 449809 KMail2 does not resize images
FIXED-IN: 5.19.3

M  +4    -4    messagecomposer/src/composer/composerviewbase.cpp
M  +1    -1    messagecomposer/src/composer/composerviewbase.h

https://invent.kde.org/pim/messagelib/commit/56e8511dd2ddd92f5be948ffedfa6b8ac61c5cba