Fix Bug 449809 KMail2 does not resize images

BUG: 449809
FIXED-IN: 5.19.3